# dlid

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml
dlid/: __init__.py  data.py  deprec.py  models.py  myfunctions.py  net.py  plotting.py  utils.py
dlid.egg-info/: PKG-INFO
docs/: conf.py  dlid.rst  index.rst  modules.rst
