[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlid"
version = "0.1.30"
authors = [
  { name="Ivan Dolgushev", email="ivandolgushev@gmail.com" },
]
dependencies = [
  "numpy",
  "torch",
  "deprecation"
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/iamalos/dlid"
"Bug Tracker" = "https://github.com/iamalos/dlid/issues"